<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_videosettings_key"
        android:title="@string/pref_videosettings_title">

        <CheckBoxPreference
            android:defaultValue="@string/pref_videocall_default"
            android:dialogTitle="@string/pref_videocall_dlg"
            android:key="@string/pref_videocall_key"
            android:title="@string/pref_videocall_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_screencapture_default"
            android:key="@string/pref_screencapture_key"
            android:title="@string/pref_screencapture_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_camera2_default"
            android:key="@string/pref_camera2_key"
            android:title="@string/pref_camera2_title" />

        <ListPreference
            android:defaultValue="@string/pref_resolution_default"
            android:dialogTitle="@string/pref_resolution_dlg"
            android:entries="@array/videoResolutions"
            android:entryValues="@array/videoResolutionsValues"
            android:key="@string/pref_resolution_key"
            android:title="@string/pref_resolution_title" />

        <ListPreference
            android:defaultValue="@string/pref_fps_default"
            android:dialogTitle="@string/pref_fps_dlg"
            android:entries="@array/cameraFps"
            android:entryValues="@array/cameraFps"
            android:key="@string/pref_fps_key"
            android:title="@string/pref_fps_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_capturequalityslider_default"
            android:dialogTitle="@string/pref_capturequalityslider_dlg"
            android:key="@string/pref_capturequalityslider_key"
            android:title="@string/pref_capturequalityslider_title" />

        <ListPreference
            android:defaultValue="@string/pref_maxvideobitrate_default"
            android:dialogTitle="@string/pref_maxvideobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate"
            android:key="@string/pref_maxvideobitrate_key"
            android:title="@string/pref_maxvideobitrate_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_maxvideobitratevalue_default"
            android:dialogTitle="@string/pref_maxvideobitratevalue_dlg"
            android:inputType="number"
            android:key="@string/pref_maxvideobitratevalue_key"
            android:title="@string/pref_maxvideobitratevalue_title" />

        <ListPreference
            android:defaultValue="@string/pref_videocodec_default"
            android:dialogTitle="@string/pref_videocodec_dlg"
            android:entries="@array/videoCodecs"
            android:entryValues="@array/videoCodecs"
            android:key="@string/pref_videocodec_key"
            android:title="@string/pref_videocodec_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_hwcodec_default"
            android:dialogTitle="@string/pref_hwcodec_dlg"
            android:key="@string/pref_hwcodec_key"
            android:title="@string/pref_hwcodec_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_capturetotexture_default"
            android:dialogTitle="@string/pref_capturetotexture_dlg"
            android:key="@string/pref_capturetotexture_key"
            android:title="@string/pref_capturetotexture_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_flexfec_default"
            android:dialogTitle="@string/pref_flexfec_dlg"
            android:key="@string/pref_flexfec_key"
            android:title="@string/pref_flexfec_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_audiosettings_key"
        android:title="@string/pref_audiosettings_title">

        <ListPreference
            android:defaultValue="@string/pref_startaudiobitrate_default"
            android:dialogTitle="@string/pref_startaudiobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate"
            android:key="@string/pref_startaudiobitrate_key"
            android:title="@string/pref_startaudiobitrate_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_startaudiobitratevalue_default"
            android:dialogTitle="@string/pref_startaudiobitratevalue_dlg"
            android:inputType="number"
            android:key="@string/pref_startaudiobitratevalue_key"
            android:title="@string/pref_startaudiobitratevalue_title" />

        <ListPreference
            android:defaultValue="@string/pref_audiocodec_default"
            android:dialogTitle="@string/pref_audiocodec_dlg"
            android:entries="@array/audioCodecs"
            android:entryValues="@array/audioCodecs"
            android:key="@string/pref_audiocodec_key"
            android:title="@string/pref_audiocodec_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_noaudioprocessing_default"
            android:dialogTitle="@string/pref_noaudioprocessing_dlg"
            android:key="@string/pref_noaudioprocessing_key"
            android:title="@string/pref_noaudioprocessing_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_aecdump_default"
            android:dialogTitle="@string/pref_aecdump_dlg"
            android:key="@string/pref_aecdump_key"
            android:title="@string/pref_aecdump_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_enable_save_input_audio_to_file_default"
            android:dialogTitle="@string/pref_enable_save_input_audio_to_file_dlg"
            android:key="@string/pref_enable_save_input_audio_to_file_key"
            android:title="@string/pref_enable_save_input_audio_to_file_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_opensles_default"
            android:dialogTitle="@string/pref_opensles_dlg"
            android:key="@string/pref_opensles_key"
            android:title="@string/pref_opensles_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_disable_built_in_aec_default"
            android:dialogTitle="@string/pref_disable_built_in_aec_dlg"
            android:key="@string/pref_disable_built_in_aec_key"
            android:title="@string/pref_disable_built_in_aec_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_disable_built_in_agc_default"
            android:dialogTitle="@string/pref_disable_built_in_agc_dlg"
            android:key="@string/pref_disable_built_in_agc_key"
            android:title="@string/pref_disable_built_in_agc_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_disable_built_in_ns_default"
            android:dialogTitle="@string/pref_disable_built_in_ns_dlg"
            android:key="@string/pref_disable_built_in_ns_key"
            android:title="@string/pref_disable_built_in_ns_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_disable_webrtc_agc_default"
            android:key="@string/pref_disable_webrtc_agc_and_hpf_key"
            android:title="@string/pref_disable_webrtc_agc_and_hpf_title" />

        <ListPreference
            android:defaultValue="@string/pref_speakerphone_default"
            android:dialogTitle="@string/pref_speakerphone_dlg"
            android:entries="@array/speakerphone"
            android:entryValues="@array/speakerphoneValues"
            android:key="@string/pref_speakerphone_key"
            android:title="@string/pref_speakerphone_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_datasettings_key"
        android:title="@string/pref_datasettings_title">

        <CheckBoxPreference
            android:defaultValue="@string/pref_enable_datachannel_default"
            android:key="@string/pref_enable_datachannel_key"
            android:title="@string/pref_enable_datachannel_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_ordered_default"
            android:key="@string/pref_ordered_key"
            android:title="@string/pref_ordered_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_data_protocol_default"
            android:dialogTitle="@string/pref_data_protocol_dlg"
            android:inputType="text"
            android:key="@string/pref_data_protocol_key"
            android:title="@string/pref_data_protocol_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_negotiated_default"
            android:key="@string/pref_negotiated_key"
            android:title="@string/pref_negotiated_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_max_retransmit_time_ms_default"
            android:dialogTitle="@string/pref_max_retransmit_time_ms_dlg"
            android:inputType="number"
            android:key="@string/pref_max_retransmit_time_ms_key"
            android:title="@string/pref_max_retransmit_time_ms_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_max_retransmits_default"
            android:dialogTitle="@string/pref_max_retransmits_dlg"
            android:inputType="number"
            android:key="@string/pref_max_retransmits_key"
            android:title="@string/pref_max_retransmits_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_data_id_default"
            android:dialogTitle="@string/pref_data_id_dlg"
            android:inputType="number"
            android:key="@string/pref_data_id_key"
            android:title="@string/pref_data_id_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_miscsettings_key"
        android:title="@string/pref_miscsettings_title">

        <EditTextPreference
            android:defaultValue="@string/pref_room_server_url_default"
            android:dialogTitle="@string/pref_room_server_url_dlg"
            android:inputType="text"
            android:key="@string/pref_room_server_url_key"
            android:title="@string/pref_room_server_url_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_displayhud_default"
            android:dialogTitle="@string/pref_displayhud_dlg"
            android:key="@string/pref_displayhud_key"
            android:title="@string/pref_displayhud_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_tracing_default"
            android:dialogTitle="@string/pref_tracing_dlg"
            android:key="@string/pref_tracing_key"
            android:title="@string/pref_tracing_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_enable_rtceventlog_default"
            android:key="@string/pref_enable_rtceventlog_key"
            android:title="@string/pref_enable_rtceventlog_title" />
    </PreferenceCategory>

</PreferenceScreen>
