<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/room_edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/room_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/connect_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:drawable/sym_action_call"
            android:contentDescription="@string/connect_description" />

        <ImageButton
            android:id="@+id/add_favorite_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_favorite_description" />
    </LinearLayout>

    <TextView
        android:id="@+id/room_listview_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/favorites"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/room_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_favorites" />
    </FrameLayout>
</LinearLayout>
